--- a/src/style.css
+++ b/src/style.css
@@ -131,18 +131,9 @@ canvas#canvas {
     cursor: crosshair;
     width: 100%;
     height: 100%;
+    touch-action: none;
 }
-/* 
-@keyframes pulse {
-    0% {
-        opacity: 50%;
-    }
 
-    100% {
-        opacity: 100%;
-    }
-    
-} */
 .active {
     font-weight: bold;
     opacity: 40%;
