--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@ html {
     height: 100%;
     font-size: 62.5%;
     font-family: 'Roboto', sans-serif;
+    touch-action: none;
 }
 
 * {
@@ -20,6 +21,7 @@ body {
     min-height: 100vh;
     width: 100%;
     overflow: hidden;
+    touch-action: none;
 }
 
 .main-section {
